--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             </div>
 
             <div class="col-xs-offset-2 col-xs-8 text-center row weather-icon">
-                <img src="http://openweathermap.org/img/w/{{icon}}.png" alt="">
-                <!-- <i class="col-xs-offset-2 col-xs-8 text-center fa fa-cloud fa-5x clouds" aria-hidden="true"></i> -->
+                <img src="{{iconLink}}" alt="weather icon">
             </div>
 
             <div class="row weather-text">
