--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weather</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
     <script src="https://use.fontawesome.com/89e76766d0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
@@ -21,21 +22,61 @@
                 <div class="bounce3"></div>
             </div>
         </div>
+
+
+
         <div class="container-fluid main" ng-show="ready">
             <div class="row location-text">
-                <p class="col-xs-offset-2 col-xs-8 text-center">{{data.city}}</p>
+                <p class="col-xs-6 date">date goes here</p>
+                <p class="col-xs-6 city">{{data.city}}</p>
             </div>
 
-            <div class="col-xs-offset-2 col-xs-8 text-center row weather-icon">
-                <img src="{{iconLink}}" alt="weather icon">
+            <div class="row">
+                <span class="col-xs-6">
+                    <!-- <img class="weather-icon" src="{{iconLink}}" alt="weather icon"> -->
+                    <i class="ion-ios-cloud-outline weather-icon"></i>
+                </span>
+                <span class="col-xs-6">
+                    <p class="temp-text">{{data.temp}}&#176;
+                        <!-- <span style="color: #0262B6">C</span> -->
+                    </p>
+                </span>
             </div>
 
-            <div class="row weather-text">
-                <h2 class="col-xs-offset-2 col-xs-8 text-center" >{{data.weather}}</h2>
+            <div class="row ">
+                <h2 class="col-xs-12 weather-text">{{data.weather}}</h2>
             </div>
 
-            <div class="row temp-text">
-                <h1 class="col-xs-offset-2 col-xs-8 text-center">{{data.temp}}&#176;<span style="color: #0262B6">C</span></h1>
+            <div class="row">
+                <span class="col-xs-3 fore">
+                    <!-- <img class="icon" src=""></img> -->
+                    <i class="ion-ios-partlysunny-outline fore-icon"></i>
+                    <div class="day">Mon</div>
+                    <div class="temp-high">temp high</div>
+                    <div class="temp-low">temp low</div>
+                </span>
+                <span class="col-xs-3 fore">
+                    <i class="ion-ios-sunny-outline fore-icon"></i>
+                    <div class="day">Tue</div>
+                    <div class="temp-high">temp high</div>
+                    <div class="temp-low">temp low</div>
+                </span>
+                <span class="col-xs-3 fore">
+                    <i class="ion-ios-rainy-outline fore-icon"></i>
+                    <div class="day">Wed</div>
+                    <div class="temp-high">temp high</div>
+                    <div class="temp-low">temp low</div>
+                </span>
+                <span class="col-xs-3 fore">
+                    <i class="ion-ios-thunderstorm-outline fore-icon"></i>
+                    <div class="day">Thu</div>
+                    <div class="temp-high">temp high</div>
+                    <div class="temp-low">temp low</div>
+                </span>
+            </div>
+
+            <div class="row">
+                <p class="text-center">more details</p>
             </div>
         </div>
     </body>
