--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
                 <p class="col-xs-6 col-lg-12 city">{{location.today.city}}</p>
             </div>
 
-            <div class="row color">
-                <span class="col-xs-6 col-sm-12">
-                    <img class="weather-icon" src="{{location.today.icon}}" alt="weather icon">
-                    <!-- <i class="ion-ios-cloud-outline weather-icon"></i> -->
+            <div class="row color" style="background-color: #0262B6; color: white;">
+                <span class="col-xs-12 col-sm-12 text-center">
+                    <!-- <img class="weather-icon" src="{{location.today.icon}}" alt="weather icon"> -->
+                    <i class="ion-ios-cloud-outline weather-icon"></i>
                 </span>
-                <span class="col-xs-6 col-sm-12">
-                    <p class="temp-text">{{location.today.temp.day}}&#176;
+                <span class="col-xs-12 col-sm-12">
+                    <p class="temp-text">{{location.today.temp.day}}&#176;C
                         <!-- <span style="color: #0262B6">C</span> -->
                     </p>
                 </span>
+                <div class="col-xs-12 weather-text">{{location.today.weather.description}}</div>
+
             </div>
 
-            <div class="row ">
-                <h2 class="col-xs-12 weather-text">{{location.today.weather.description}}</h2>
-            </div>
 
-            <div class="row">
-                <span class="col-xs-3 fore" ng-repeat="fore in location.forecast">
-                    <!-- <i class="ion-ios-partlysunny-outline fore-icon"></i> -->
-                    <img class="fore-icon" src="{{fore.icon}}" alt="weather icon">
+
+            <div class="row" >
+                <span class="col-xs-3 fore" ng-repeat="fore in location.forecast" style="background-color: #f3f3f3; color: black;">
+                    <i class="ion-ios-partlysunny-outline fore-icon"></i>
+                    <!-- <img class="fore-icon" src="{{fore.icon}}" alt="weather icon"> -->
                     <div class="day">{{fore.day}}</div>
                     <div class="temp-high hot">{{fore.temp.max}}&#176;</div>
                     <div class="temp-low cold">{{fore.temp.min}}&#176;</div>
