--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="row">
-                <p class="text-center">more details</p>
+                <!-- <p class="text-center">more details</p> -->
             </div>
         </div>
     </body>
