--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="https://use.fontawesome.com/89e76766d0.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
@@ -53,7 +52,7 @@
                     <div class="fore-temp-low cold">{{fore.temp.min}}&#176;</div>
                 </span>
             </div>
-            <div class="visible-xs more-info-container">
+            <div class="more-info-container">
                 <div class="row col-xs-12 text-center more-info-description">
                     currently {{location.today.weather.name}} in {{location.today.city}}.
                 </div>
