--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 </span>
             </div>
             <div class="more-info-container">
-                <div class="row col-xs-12 text-center more-info-description">
+                <!-- <div class="row col-xs-12 text-center more-info-description">
                     currently {{location.today.weather.name}} in {{location.today.city}}.
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-xs-6 left">
                         pressure:<br>
